samples/_failures_safe/1761647017_7be02c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f719f1f3.c: In function ‘main’:
./samples/SAFE/__tmp_f719f1f3.c:141:5: error: expected expression at end of input
  141 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_f719f1f3.c:141:5: error: expected declaration or statement at end of input
